--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^2.18.0
   firebase_auth: ^4.20.0
+  cloud_firestore: ^4.9.3
   provider: ^6.1.5
 
 dev_dependencies:
