--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_auth: ^4.20.0
   provider: ^6.1.5
   cloud_firestore: ^4.15.5  # Use a version compatible with your Firebase setup
+  supabase_flutter: ^2.3.4
+  image_picker: ^1.0.7
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
