--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   supabase_flutter: ^2.3.4
   image_picker: ^1.0.7
   permission_handler: ^11.3.0
+#  flutter_local_notifications: ^16.3.2
 
 dev_dependencies:
   flutter_test:
